--- a/WindowsUIWalla/ManageWalla/WallaControlTemplates.xaml
+++ b/WindowsUIWalla/ManageWalla/WallaControlTemplates.xaml
@@ -5,7 +5,7 @@
 
     <local:UploadImageFileList x:Key="uploadImagefileListKey" />
     <local:UploadUIState x:Key="uploadUIStateKey"  />
-    <local:UploadStatusList x:Key="uploadStatusListKey"  />
+    <local:UploadStatusListBind x:Key="uploadStatusListBindKey"  />
     <local:WallaDateConverter x:Key="wallaDateConverterKey"  />
     <local:WallaUploadStatusConverter x:Key="wallaUploadStatusConverterKey"  />
     
