--- a/WindowsUIWalla/ManageWalla/Main.xaml
+++ b/WindowsUIWalla/ManageWalla/Main.xaml
@@ -255,7 +255,22 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <WrapPanel x:Name="wrapImages" Grid.Column="0" Grid.Row="0" />
+            <ListBox Grid.Column="0" Grid.Row="0" Style="{DynamicResource PhotoListStyle}" 
+                            		    x:Name ="lstImageMainViewerList" 
+                            		    ItemsSource="{Binding Mode=OneWay, Source={StaticResource imageMainViewerListKey}}"
+                            		    ItemContainerStyle="{DynamicResource PhotoListItem}" 
+                            		    SelectedIndex="0"
+                            		    ScrollViewer.VerticalScrollBarVisibility="Visible"
+                                        SelectionMode="Single"
+                                        IsSynchronizedWithCurrentItem="True">
+
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Image Source="{Binding Image}" />
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+
             <ToggleButton x:Name="cmdView" Grid.Column="0" Grid.Row="1" Content="View" Margin="2,2,4,2" Checked="cmdView_Checked" Template="{StaticResource templateToggleButton}" Style="{StaticResource styleToggleButton}" />
 
             <DockPanel x:Name="panViewWorking" Grid.Column="0" Grid.Row="2">
@@ -585,8 +600,8 @@
                                             </Grid.ColumnDefinitions>
 
                                             <Label Content="Apply to all images"  Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2"></Label>
-                                            <!--IsChecked="{Binding Source={StaticResource uploadUIStateKey}, Mode=TwoWay, Path=MetaTagRefAll}"-->
-                                            <CheckBox x:Name="chkUploadTagsAll" Grid.Column="2" Grid.Row="0" Style="{StaticResource styleCheckbox}" Checked="chkUploadTagsAll_Checked" Unchecked="chkUploadTagsAll_Unchecked"  />
+                                            <!---->
+                                            <CheckBox x:Name="chkUploadTagsAll" Grid.Column="2" Grid.Row="0" Style="{StaticResource styleCheckbox}" IsChecked="{Binding Source={StaticResource uploadUIStateKey}, Mode=TwoWay, Path=MetaTagRefAll}" Checked="chkUploadTagsAll_Checked" Unchecked="chkUploadTagsAll_Unchecked"  />
                                             <ListBox Style="{DynamicResource TagListStyle}" 
                                                         Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3"
                             		                    x:Name ="lstUploadTagList" 
@@ -613,6 +628,7 @@
                             </Grid>
 
                         </TabItem>
+                        
                         <TabItem x:Name="tabUploadStatusList" Header="Upload Status" >
                             <Grid>
                                 <Grid.RowDefinitions>
@@ -634,28 +650,30 @@
                                         </DataTemplate>
                                     </ListBox.ItemTemplate>
                                 -->
-                                <DataGrid x:Name="datUploadStatusList" AutoGenerateColumns="False" SelectionUnit="FullRow" SelectionMode="Single" CanUserResizeColumns="True" MinColumnWidth="40" CanUserSortColumns="True">
+                                <DataGrid x:Name="datUploadStatusList" AutoGenerateColumns="False" SelectionUnit="FullRow" SelectionMode="Single" CanUserResizeColumns="True" MinColumnWidth="40" CanUserSortColumns="True" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True">
                                     <DataGrid.ItemsSource>
                                         <!--<Binding Source="{StaticResource uploadStatusListXmlKey}"  XPath="s:UploadStatusList/s:ImageUploadRef" />-->
                                         <Binding Source="{StaticResource uploadStatusListBindKey}" />
                                     </DataGrid.ItemsSource>
                                     <DataGrid.Columns>
-                                        <DataGridTextColumn Header="Name" Binding="{Binding imageStatus}" MinWidth="40" Width="*" IsReadOnly="True" CanUserSort="True" />
-
-                                        <!--<DataGridTextColumn Header="Status" Binding="{Binding XPath=@imageStatus, Converter={StaticResource wallaUploadStatusConverterKey}}" MinWidth="40" Width="3*" IsReadOnly="True" CanUserSort="True"/>-->
-                                        <!--<DataGridTextColumn Header="Last Updated"  Binding="{Binding XPath=@lastUpdated, StringFormat=D}" MinWidth="40" Width="3*" IsReadOnly="True" CanUserSort="True" />-->
-<!--
-                                        <DataGridTemplateColumn Header="Last Updated" MinWidth="40" Width="3*" IsReadOnly="True">
+                                        <DataGridTextColumn Header="Name" Binding="{Binding name}" MinWidth="40" Width="*" IsReadOnly="True" CanUserSort="True" />
+                                        <DataGridTemplateColumn Header="Status" MinWidth="40" Width="3*" IsReadOnly="True" SortMemberPath="imageStatus">
                                             <DataGridTemplateColumn.CellTemplate>
                                                 <DataTemplate>
-                                                    <TextBlock Text="{Binding XPath=@lastUpdated, Converter={StaticResource wallaDateConverterKey}, ConverterParameter=\{0:g\}}">
-
+                                                    <TextBlock Text="{Binding imageStatus, Converter={StaticResource wallaUploadStatusConverterKey}}" ToolTip="{Binding errorMessage}">
                                                     </TextBlock>
                                                 </DataTemplate>
                                             </DataGridTemplateColumn.CellTemplate>
                                         </DataGridTemplateColumn>
--->
+                                        <DataGridTextColumn Header="Last Updated" Binding="{Binding lastUpdated, StringFormat=g}" MinWidth="40" Width="*" IsReadOnly="True" CanUserSort="True" />
                                     </DataGrid.Columns>
+
+                                    <!--<DataGridTextColumn Header="Status" Binding="{Binding imageStatus, Converter={StaticResource wallaUploadStatusConverterKey}}" ToolTipService.IsEnabled="True" ToolTipService.ToolTip="{Binding errorMessage}" MinWidth="40" Width="*" IsReadOnly="True" CanUserSort="True" />-->
+                                        
+                                        <!--<DataGridTextColumn Header="Status" Binding="{Binding XPath=@imageStatus, Converter={StaticResource wallaUploadStatusConverterKey}}" MinWidth="40" Width="3*" IsReadOnly="True" CanUserSort="True"/>-->
+                                        <!--<DataGridTextColumn Header="Last Updated"  Binding="{Binding XPath=@lastUpdated, StringFormat=D}" MinWidth="40" Width="3*" IsReadOnly="True" CanUserSort="True" />-->
+
+
 
                                 </DataGrid>
 
@@ -684,6 +702,7 @@
 
                     </TabControl>
 
+                    <!--
                     <Grid Grid.Column="0" Grid.Row="0">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*" />
@@ -691,24 +710,16 @@
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        <!--   -->
-                        <ListBox Style="{DynamicResource PhotoListStyle}" 
+-->
+                        <ListBox Grid.Column="0" Grid.Row="0" Style="{DynamicResource PhotoListStyle}" 
                             		    x:Name ="lstUploadImageFileList" 
                             		    ItemsSource="{Binding Mode=OneWay, Source={StaticResource uploadImagefileListKey}}"
                             		    ItemContainerStyle="{DynamicResource PhotoListItem}" 
                             		    SelectedIndex="0"
-                            		    ScrollViewer.VerticalScrollBarVisibility="Visible" Grid.Column="0" Grid.Row="0"
+                            		    ScrollViewer.VerticalScrollBarVisibility="Visible"
                                         SelectionMode="Single"
                                         IsSynchronizedWithCurrentItem="True"
                                         SelectionChanged="lstUploadImageFileList_SelectionChanged">
-                            <!--
-                                    <ListBoxItem IsSelected="True">
-                                        <Image Source="C:\Users\FastEddy\Desktop\video1.jpg" />
-                                    </ListBoxItem>
-                                    <ListBoxItem IsEnabled="False">
-                                        <Image Source="C:\Users\FastEddy\Desktop\video1.jpg" />
-                                    </ListBoxItem>
-                                    -->
 
                             <ListBox.ItemTemplate>
                                 <DataTemplate>
@@ -717,7 +728,7 @@
                             </ListBox.ItemTemplate>
                         </ListBox>
 
-                    </Grid>
+                    <!--</Grid>-->
                 </Grid>
             </DockPanel>
         </Grid>
