--- a/WindowsUIWalla/ManageWalla/App.xaml
+++ b/WindowsUIWalla/ManageWalla/App.xaml
@@ -2,13 +2,13 @@
              xmlns:walla="clr-namespace:ManageWalla"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Main.xaml">
+             StartupUri="MainTwo.xaml">
     <Application.Resources>
-
+        
         <Style x:Key="styleButton" TargetType="{x:Type Button}">
             <Setter Property="Background" Value="#FFE6D4D4" />
-            <Setter Property="Margin" Value="4" />
-            <Setter Property="Padding" Value="4" />
+            <Setter Property="Margin" Value="2" />
+            <!--<Setter Property="Padding" Value="4" />-->
             <Setter Property="BorderBrush" Value="#FF616161" />
             <Setter Property="Foreground" Value="#FFB82F5A" />
             <Style.Triggers>
@@ -20,20 +20,15 @@
         </Style>
 
         <Style x:Key="styleToggleButton" TargetType="{x:Type ToggleButton}">
+            <Setter Property="Margin" Value="2" />
             <Setter Property="Background" Value="#FFE6D4D4" />
-            
-            <!--<Setter Property="Padding" Value="2" />-->
-            <Setter Property="BorderBrush" Value="#FF616161" />
-            <Setter Property="Foreground" Value="#FFB82F5A" />
+            <Setter Property="BorderBrush" Value="#FF214D4D" />
+            <Setter Property="Foreground" Value="#FF408383" />
             <Setter Property="TextBlock.FontSize" Value="16" />
+            <Setter Property="Opacity" Value="0.8" />
             <Style.Triggers>
                 <Trigger Property="IsChecked" Value="true">
-                    <Setter Property="Foreground" Value="Black" />
-                    <Setter Property="Background" Value="#FFF3ECEC" />
-                </Trigger>
-                <Trigger Property="IsMouseOver" Value="true">
-                    <Setter Property="Foreground" Value="Black" />
-                    <Setter Property="Background" Value="#FFF3ECEC" />
+                    <Setter Property="Opacity" Value="1.0" />
                 </Trigger>
             </Style.Triggers>
         </Style>
